tests/ui/parser/pat-ranges-1.stderr
error: expected one of `:`, `;`, `=`, or `|`, found `..=`
  --> $DIR/pat-ranges-1.rs:4:21
   |
LL |     let macropus!() ..= 11 = 12;
   |                     ^^^ expected one of `:`, `;`, `=`, or `|`

error: aborting due to 1 previous error

